# serverless-matching-engine

./: .dockerignore  .gitignore  AGENTS.md  BENCHMARK.md  CLAUDE.md  Cargo.toml  README.md  WORKER_LAMBDA.md  docker-compose.yml  verify_refactor.py
crates/api/: Cargo.toml
crates/api/src/: main.rs  routes.rs  worker.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs  local_main.rs  main.rs  routes.rs  worker.rs
crates/matching-engine/: Cargo.toml
crates/matching-engine/src/: engine.rs  main.rs
crates/order-service/: Cargo.toml
crates/order-service/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/benches/: matching.rs
crates/shared/migrations/: 001_initial.sql  002_seed.sql  003_idempotency.sql
crates/shared/src/: cache.rs  config.rs  db.rs  engine.rs  integration_tests.rs  lib.rs  lock.rs  metrics.rs  streams.rs  types.rs
crates/shared/src/lua/: match_order.lua
crates/transaction-service/: Cargo.toml
crates/transaction-service/src/: main.rs
crates/worker-lambda/: Cargo.toml
crates/worker-lambda/src/: main.rs
crates/ws-handler/: Cargo.toml
crates/ws-handler/src/: main.rs
docs/: architecture.md  aws-architecture.md  scaling-strategy.md
docs/adr/: 001-stateless-workers.md  002-gateway-cache-broadcasts.md  003-async-db-persistence.md  004-lua-atomic-matching.md  005-per-pair-queue-consumers.md  006-api-gateway-websocket.md  007-lambda-queue-dispatch.md  008-sqs-dispatch-modes.md  009-rds-proxy-required.md  010-native-lambda-runtime-for-gateway.md  README.md
docs/benchmarks/: 2026-03-14-final-benchmarks.md  2026-03-14-lua-matching.md  2026-03-14-occ-lock-replacement.md  2026-03-14-optimization-benchmarks.md  2026-03-14-pool-and-batch-benchmarks.md  2026-03-25-baseline.md  optimization-log.md
docs/brainstorm/: README.md
docs/decisions/: ADR-001-serverless-architecture.md  ADR-002-redis-locking.md  ADR-003-stateless-matching-engine.md  ADR-004-dragonfly-postgresql.md  ADR-005-rust-implementation.md  ADR-006-idempotency-and-sandwich-protection.md  README.md
docs/openspec/specs/market-data/: spec.md
docs/openspec/specs/matching/: spec.md
docs/openspec/specs/portfolio/: spec.md
docs/openspec/specs/realtime/: spec.md
docs/planning/: roadmap.md  tasks.md
docs/specs/: README.md  common-functions.md  features.md  matching-engine.md  order-service.md  transaction-service.md
infra/: Dockerfile.gateway  Dockerfile.worker  Dockerfile.ws-handler  PUSH-IMAGE.md  README.md  cfn-backend.yaml  cfn-frontend.yaml  deploy-worker.sh  deploy.sh  ec2-userdata.sh  samconfig.toml  template-deploy.yaml  template.yaml
infra/.aws-sam/: build.toml  packaged.yaml
infra/scripts/: init-rds.sh
infra/stacks/: backend.yaml  frontend.yaml  network.yaml
memory/: 2026-03-27.md  2026-03-28.md  heartbeat-state.json
migrations/: 001_initial_schema.sql  002_idempotency.sql  003_performance_indexes.sql  004_lifecycle_timestamps.sql  005_drop_trade_fks.sql  20260314000000_initial_schema.sql  20260314010000_idempotency.sql  20260314020000_performance_indexes.sql  20260325000000_lifecycle_timestamps.sql  20260325010000_drop_trade_fks.sql  20260328000000_unlogged_tables.sql  20260328000001_partial_index.sql
openspec/specs/: README.md
openspec/specs/admin/: spec.md
openspec/specs/infra/: spec.md
openspec/specs/orders/: spec.md
scripts/: README.md  bench-mode.sh
services/matching-engine/: README.md
services/order-service/: README.md
services/transaction-service/: README.md
shared/redis/: README.md
tests/: README.md
tests/integration/: test_orderbook_pairs.sh
tests/smoke/: smoke_test.py
tmp/: latency_test.sh  run_bench.sh  run_burst.sh  run_full_bench.sh
tools/: bench_aws.py  bench_aws_direct.py  bench_sqs_direct.py  bench_throughput.py  benchmark.py  benchmark_h2.py  benchmark_v2.py  deploy.sh  migrate.sh  new_migration.sh  seed_book.py  ui-loadtest.py  ui-ux-audit.py
tools/loadtest/: Cargo.toml
tools/loadtest/src/: main.rs
web/dashboard/: app.js  index.html  style.css
web/trading/: app.js  config.js  index.html  style.css  test_orderbook.html
