[package]
name = "sme-api"
version.workspace = true
edition.workspace = true

[dependencies]
sme-shared = { path = "../shared" }
tokio.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
anyhow.workspace = true
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

[[bin]]
name = "sme-api"
path = "src/main.rs"
