[package]
name = "sme-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
sme-shared = { path = "../shared" }
tokio.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
anyhow.workspace = true
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip"] }
futures-util = "0.3"

[[bin]]
name = "sme-gateway"
path = "src/main.rs"