[package]
name = "sme-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
sme-shared = { path = "../shared" }
tokio.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
anyhow.workspace = true
axum = { version = "0.8", features = ["ws"] }
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["http1", "http2", "server", "tokio"] }
tower = "0.5"
tower-service = "0.3"
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip"] }
futures-util = "0.3"
bytes = "1"
async-stream = "0.3"
socket2 = { version = "0.5", features = ["all"] }

[[bin]]
name = "sme-gateway"
path = "src/main.rs"