[package]
name = "matching-engine"
version.workspace = true
edition.workspace = true

[dependencies]
sme-shared = { path = "../shared" }
tokio.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
sqlx.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true
rust_decimal.workspace = true

[[bin]]
name = "matching-engine"
path = "src/main.rs"
