[package]
name = "sme-shared"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
tracing.workspace = true
thiserror.workspace = true
rand.workspace = true
