[package]
name = "sme-worker-lambda"
version.workspace = true
edition.workspace = true

[dependencies]
sme-shared = { path = "../shared" }
lambda_runtime = "0.13"
aws-config = "1"
aws-sdk-lambda = "1"
aws-sdk-apigatewaymanagement = "1"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
anyhow.workspace = true
deadpool-redis.workspace = true
redis.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
once_cell.workspace = true

[[bin]]
name = "bootstrap"
path = "src/main.rs"
