[package]
name = "sme-ws-handler"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
deadpool-redis = "0.18"
redis = { version = "0.27", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
aws-sdk-apigatewaymanagement = "1"
aws-config = "1"
anyhow = "1"
once_cell = "1"
